# ZRobot_ROS

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  main.ino  package.xml  setup.sh
web_interface/: CMakeLists.txt  package.xml
web_interface/src/: web_server.py
zrobot_bringup/: CMakeLists.txt  package.xml
zrobot_bringup/config/: zrobot_config.yaml
zrobot_bringup/launch/: zrobot_launch.py
zrobot_control/: CMakeLists.txt  package.xml
zrobot_control/include/: colors.h
zrobot_control/src/: colors.cpp  motor_controller_node.cpp
zrobot_interfaces/: CMakeLists.txt  package.xml
zrobot_interfaces/msg/: DetectionStatus.msg  MotorCommand.msg
zrobot_interfaces/srv/: SetConfig.srv  SetTarget.srv
zrobot_obstacle_avoidance/: CMakeLists.txt  package.xml
zrobot_obstacle_avoidance/src/: obstacle_avoidance_node.py
zrobot_perception/: CMakeLists.txt  package.xml
zrobot_perception/include/: coco_classes.h  colors.h  object_search.h  object_struct.h  object_tracker.h  yolo_detector.h
zrobot_perception/src/: colors.cpp  object_search.cpp  yolo_detector.cpp  yolo_detector_node.cpp
